@@ -21,7 +21,6 @@ import org.jetbrains.annotations.NotNull;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * 친구 요청 GUI
@@ -42,22 +41,20 @@ public class FriendRequestGui extends BaseGui {
 
     private final FriendManager friendManager;
 
-    private FriendRequestGui(@NotNull GuiManager guiManager, @NotNull LangManager langManager,
-                           @NotNull Player player) {
+    private FriendRequestGui(@NotNull GuiManager guiManager, @NotNull LangManager langManager, @NotNull Player player) {
         super(player, guiManager, langManager, GUI_SIZE, "gui.friend-requests.title");
         this.friendManager = FriendManager.getInstance();
     }
 
     /**
      * FriendRequestGui 인스턴스를 생성하고 초기화합니다.
-     * 
-     * @param guiManager GUI 매니저
+     *
+     * @param guiManager  GUI 매니저
      * @param langManager 언어 매니저
-     * @param player 플레이어
+     * @param player      플레이어
      * @return 초기화된 FriendRequestGui 인스턴스
      */
-    public static FriendRequestGui create(@NotNull GuiManager guiManager, @NotNull LangManager langManager,
-                                         @NotNull Player player) {
+    public static FriendRequestGui create(@NotNull GuiManager guiManager, @NotNull LangManager langManager, @NotNull Player player) {
         FriendRequestGui gui = new FriendRequestGui(guiManager, langManager, player);
         gui.initialize("gui.friend-requests.title");
         gui.loadRequests();
@@ -92,14 +89,7 @@ public class FriendRequestGui extends BaseGui {
      * 타이틀 아이템 설정
      */
     private void setupTitleItem() {
-        GuiItem titleItem = GuiItem.display(
-                new ItemBuilder(Material.WRITABLE_BOOK)
-                        .displayName(Component.text("📨 친구 요청", ColorUtil.UNCOMMON)
-                                .decoration(TextDecoration.BOLD, true))
-                        .addLore(Component.empty())
-                        .addLore(Component.text("받은 친구 요청을 관리합니다", ColorUtil.GRAY))
-                        .build()
-        );
+        GuiItem titleItem = GuiItem.display(new ItemBuilder(Material.WRITABLE_BOOK).displayName(Component.text("📨 친구 요청", ColorUtil.UNCOMMON).decoration(TextDecoration.BOLD, true)).addLore(Component.empty()).addLore(Component.text("받은 친구 요청을 관리합니다", ColorUtil.GRAY)).build());
         setItem(TITLE_SLOT, titleItem);
     }
 
@@ -113,11 +103,7 @@ public class FriendRequestGui extends BaseGui {
         }
 
         // 로딩 표시
-        setItem(22, GuiItem.display(
-                new ItemBuilder(Material.HOPPER)
-                        .displayName(Component.text("로딩 중...", ColorUtil.GRAY))
-                        .build()
-        ));
+        setItem(22, GuiItem.display(new ItemBuilder(Material.HOPPER).displayName(Component.text("로딩 중...", ColorUtil.GRAY)).build()));
 
         // 비동기로 친구 요청 목록 로드
         friendManager.getPendingRequests(viewer.getUniqueId()).thenAccept(requests -> {
@@ -138,19 +124,12 @@ public class FriendRequestGui extends BaseGui {
 
         if (requests.isEmpty()) {
             // 요청이 없을 때
-            setItem(22, GuiItem.display(
-                    new ItemBuilder(Material.BARRIER)
-                            .displayName(Component.text("받은 친구 요청이 없습니다", ColorUtil.ERROR))
-                            .addLore(Component.text("새로운 요청이 오면 알림을 받을 수 있습니다", ColorUtil.GRAY))
-                            .build()
-            ));
+            setItem(22, GuiItem.display(new ItemBuilder(Material.BARRIER).displayName(Component.text("받은 친구 요청이 없습니다", ColorUtil.ERROR)).addLore(Component.text("새로운 요청이 오면 알림을 받을 수 있습니다", ColorUtil.GRAY)).build()));
             return;
         }
 
         // 요청을 시간순으로 정렬 (최신 순)
-        List<FriendRequestDTO> sortedRequests = requests.stream()
-                .sorted((r1, r2) -> r2.getRequestTime().compareTo(r1.getRequestTime()))
-                .collect(Collectors.toList());
+        List<FriendRequestDTO> sortedRequests = requests.stream().sorted((r1, r2) -> r2.requestTime().compareTo(r1.requestTime())).toList();
 
         // 요청 아이템 생성
         int slot = REQUESTS_START_SLOT;
@@ -161,70 +140,39 @@ public class FriendRequestGui extends BaseGui {
             if (slot + 2 > REQUESTS_END_SLOT) break;
 
             // 요청자 정보
-            GuiItem requestInfo = GuiItem.display(
-                    new ItemBuilder(Material.PLAYER_HEAD)
-                            .displayName(Component.text(request.getFromPlayerName(), ColorUtil.PRIMARY)
-                                    .decoration(TextDecoration.BOLD, true))
-                            .addLore(Component.empty())
-                            .addLore(Component.text("요청 시간: " + 
-                                    request.getRequestTime().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm")), 
-                                    ColorUtil.GRAY))
-                            .addLore(Component.empty())
-                            .addLore(request.getMessage() != null ? 
-                                    Component.text("메시지: " + request.getMessage(), ColorUtil.WHITE) :
-                                    Component.text("메시지 없음", ColorUtil.GRAY))
-                            .addLore(Component.empty())
-                            .addLore(Component.text("우측 버튼으로 수락/거절", ColorUtil.YELLOW))
-                            .build()
-            );
+            GuiItem requestInfo = GuiItem.display(new ItemBuilder(Material.PLAYER_HEAD).displayName(Component.text(request.fromPlayerName(), ColorUtil.PRIMARY).decoration(TextDecoration.BOLD, true)).addLore(Component.empty()).addLore(Component.text("요청 시간: " + request.requestTime().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm")), ColorUtil.GRAY)).addLore(Component.empty()).addLore(request.message() != null ? Component.text("메시지: " + request.message(), ColorUtil.WHITE) : Component.text("메시지 없음", ColorUtil.GRAY)).addLore(Component.empty()).addLore(Component.text("우측 버튼으로 수락/거절", ColorUtil.YELLOW)).build());
             setItem(slot, requestInfo);
 
             // 수락 버튼
-            GuiItem acceptButton = GuiItem.clickable(
-                    new ItemBuilder(Material.LIME_DYE)
-                            .displayName(Component.text("✓ 수락", ColorUtil.SUCCESS)
-                                    .decoration(TextDecoration.BOLD, true))
-                            .addLore(Component.empty())
-                            .addLore(Component.text(request.getFromPlayerName() + "님의", ColorUtil.GRAY))
-                            .addLore(Component.text("친구 요청을 수락합니다", ColorUtil.GRAY))
-                            .addLore(Component.empty())
-                            .addLore(Component.text("클릭하여 수락", ColorUtil.YELLOW))
-                            .build(),
-                    p -> {
-                        friendManager.acceptFriendRequest(p, request.getId()).thenAccept(success -> {
-                            if (success) {
-                                Bukkit.getScheduler().runTask(plugin, () -> {
-                                    loadRequests(); // 목록 새로고침
-                                });
-                            }
-                        });
-                        playSuccessSound(p);
+            GuiItem acceptButton = GuiItem.clickable(new ItemBuilder(Material.LIME_DYE).displayName(Component.text("✓ 수락", ColorUtil.SUCCESS).decoration(TextDecoration.BOLD, true)).addLore(Component.empty()).addLore(Component.text(request.fromPlayerName() + "님의", ColorUtil.GRAY)).addLore(Component.text("친구 요청을 수락합니다", ColorUtil.GRAY)).addLore(Component.empty()).addLore(Component.text("클릭하여 수락", ColorUtil.YELLOW)).build(), p -> {
+                if (request.id() == null) {
+                    p.sendMessage(Component.text("친구 요청 ID가 없습니다.", ColorUtil.ERROR));
+                    return;
+                }
+                friendManager.acceptFriendRequest(p, request.id()).thenAccept(success -> {
+                    if (success) {
+                        // 목록 새로고침
+                        Bukkit.getScheduler().runTask(plugin, this::loadRequests);
                     }
-            );
+                });
+                playSuccessSound(p);
+            });
             setItem(slot + 1, acceptButton);
 
             // 거절 버튼
-            GuiItem rejectButton = GuiItem.clickable(
-                    new ItemBuilder(Material.RED_DYE)
-                            .displayName(Component.text("✗ 거절", ColorUtil.ERROR)
-                                    .decoration(TextDecoration.BOLD, true))
-                            .addLore(Component.empty())
-                            .addLore(Component.text(request.getFromPlayerName() + "님의", ColorUtil.GRAY))
-                            .addLore(Component.text("친구 요청을 거절합니다", ColorUtil.GRAY))
-                            .addLore(Component.empty())
-                            .addLore(Component.text("클릭하여 거절", ColorUtil.YELLOW))
-                            .build(),
-                    p -> {
-                        friendManager.rejectFriendRequest(p, request.getId()).thenAccept(success -> {
-                            if (success) {
-                                Bukkit.getScheduler().runTask(plugin, () -> {
-                                    loadRequests(); // 목록 새로고침
-                                });
-                            }
-                        });
-                        playClickSound(p);
+            GuiItem rejectButton = GuiItem.clickable(new ItemBuilder(Material.RED_DYE).displayName(Component.text("✗ 거절", ColorUtil.ERROR).decoration(TextDecoration.BOLD, true)).addLore(Component.empty()).addLore(Component.text(request.fromPlayerName() + "님의", ColorUtil.GRAY)).addLore(Component.text("친구 요청을 거절합니다", ColorUtil.GRAY)).addLore(Component.empty()).addLore(Component.text("클릭하여 거절", ColorUtil.YELLOW)).build(), p -> {
+                if (request.id() == null) {
+                    p.sendMessage(Component.text("친구 요청 ID가 없습니다.", ColorUtil.ERROR));
+                    return;
+                }
+                friendManager.rejectFriendRequest(p, request.id()).thenAccept(success -> {
+                    if (success) {
+                        // 목록 새로고침
+                        Bukkit.getScheduler().runTask(plugin, this::loadRequests);
                     }
-            );
+                });
+                playClickSound(p);
+            });
             setItem(slot + 2, rejectButton);
 
             slot += 9; // 다음 줄로 이동
@@ -233,6 +181,6 @@ public class FriendRequestGui extends BaseGui {
 
     @Override
     protected List<ClickType> getAllowedClickTypes() {
-        return List.of(ClickType.LEFT);
+        return super.getAllowedClickTypes();
     }
 }
